# Input-Logger

./: LICENSE  README.md  main.py  main_analysis.py  pyproject.toml  requirements.txt
install/: main_app.spec  main_install.py  run_app.py
logger/: __init__.py  database.py  logger.py
scripts/: analyse_keys.py  analyse_mouse.py  main_analysis.py  main_app.py  main_logger.py
src/inputlog/: __init__.py  cli.py  database.py  logger.py
