[project]
name = "inputlog"
version = "1.0.0"
description = "A simple Input Logger app"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Marko Leskovar", email = "markoleskovar30@gmail.com" }]
keywords = [
  "input logger",
  "mouse",
  "keyboard",
  "logging",
  "development"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "Topic :: System :: Logging",
  "Topic :: System :: Monitoring",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.11"
dependencies = [
  "numpy ~= 2.2.5",
  "pynput ~= 1.8.1",
  "pandas ~= 2.2.3",
  "matplotlib ~= 3.10.1",
  "pyinstaller ~= 6.13.0"
]

[project.urls]
"Source code" = "https://github.com/MarkoLeskovar/Input-Logger"

[project.scripts]
inputlog = "inputlog.cli:main_cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
